<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@color/primary"
    app:contentPadding="12dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/card_view_margin_vertical"
    android:layout_marginBottom="@dimen/card_view_margin_vertical"
    android:layout_marginLeft="@dimen/card_view_margin_horizontal_full_width"
    android:layout_marginRight="@dimen/card_view_margin_horizontal_full_width"
    android:background="@color/primary"
    android:theme="@style/CardTheme">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resource_directory_title" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/resource_directory_info" />

        <Button
            android:id="@+id/button_resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/resource_directory_button" />
    </LinearLayout>

</android.support.v7.widget.CardView>