<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<variable
			name="viewmodel"
			type="jsettlers.main.android.mainmenu.home.MainMenuViewModel"/>
	</data>

	<android.support.v7.widget.CardView
		android:id="@+id/cardView_resume"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="@dimen/card_view_margin_vertical"
		android:layout_marginLeft="@dimen/card_view_margin_horizontal_full_width"
		android:layout_marginRight="@dimen/card_view_margin_horizontal_full_width"
		android:layout_marginTop="@dimen/card_view_margin_vertical"
		android:background="@color/primary"
		android:foreground="?android:attr/selectableItemBackground"
		android:theme="@style/CardTheme"
		app:cardBackgroundColor="@color/primary"
		app:contentPadding="12dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				style="@style/TextAppearance.AppCompat.Title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/menu_game_in_progress"/>

			<LinearLayout
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="end"
				android:layout_marginTop="8dp"
				android:orientation="horizontal">

				<Button
					android:id="@+id/button_quit"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/game_menu_quit"
					android:onClick="@{() -> viewmodel.quitSelected()}"/>

				<Button
					android:id="@+id/button_pause"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/game_menu_pause"
					android:onClick="@{() -> viewmodel.pauseSelected()}"/>
			</LinearLayout>

		</LinearLayout>

	</android.support.v7.widget.CardView>

</layout>