<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
									xmlns:app="http://schemas.android.com/apk/res-auto"
									android:id="@+id/cardView_resourcePicker"
									android:layout_width="match_parent"
									android:layout_height="wrap_content"
									android:layout_marginBottom="@dimen/card_view_margin_vertical"
									android:layout_marginLeft="@dimen/card_view_margin_horizontal_full_width"
									android:layout_marginRight="@dimen/card_view_margin_horizontal_full_width"
									android:layout_marginTop="@dimen/card_view_margin_vertical"
									android:background="@color/primary"
									android:theme="@style/CardTheme"
									app:cardBackgroundColor="@color/primary">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical">

		<TextView
			style="@style/TextAppearance.AppCompat.Title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingTop="12dp"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:text="@string/resource_directory_title"/>

		<ProgressBar
			android:id="@+id/progressBar"
			style="@style/Widget.AppCompat.ProgressBar.Horizontal"
			android:visibility="invisible"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:indeterminate="true"/>

		<TextView
			android:id="@+id/textView_directoriesExplanation"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:text="@string/resource_directory_info"/>

		<ListView
			android:id="@+id/listView"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="1"
			android:visibility="gone"/>

		<Button
			android:id="@+id/button_resources"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_marginTop="8dp"
			android:paddingBottom="12dp"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:text="@string/resource_directory_button"/>

	</LinearLayout>

</android.support.v7.widget.CardView>