<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.mainmenu.NewSinglePlayerSetupFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/include_toolbar" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/image_view_map_preview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="16dp"/>

            <android.support.v7.widget.GridLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                app:columnCount="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:layout_gravity="center_vertical"
                    android:text="@string/number_of_players"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_number_of_players"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    app:layout_columnWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:layout_gravity="center_vertical"
                    android:text="@string/start_resources"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_start_resources"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    app:layout_columnWeight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    app:layout_gravity="center_vertical"
                    android:text="@string/peacetime"/>

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinner_peacetime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    app:layout_columnWeight="1" />

            </android.support.v7.widget.GridLayout>

        </LinearLayout>

        <Button
            android:theme="@style/CardTheme"
            android:id="@+id/button_start_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/start_game" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear_layout_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="Number of players\nPlayer races\netc..." />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
